# squidbot

./: .gitignore  .hdoc.toml  CMakeLists.txt  Cargo.toml  Dockerfile  GitVersion.yml  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.val.yml  docker-compose.yml  notes.txt  squidbot-build.debug.yml  squidbot-build.release.yml
.github/workflows/: codeql.yml  development.yml  squidbot-deploy.yml  squidbot-staging.yml  squidbot-start-staging.yml  squidbot-validate.yml  unit_test.yml
lib/: Cargo.toml
scripts/: gen-dev-env.sh  gen-gha-env.sh  package.sh  plugin-gen.py  service-gen.py
scripts/plugin-template/: CMakeLists.txt  factory.cpp  templatename.cpp  templatename.h
scripts/service-template/: CMakeLists.txt  events.h  factory.cpp  templatename.cpp  templatename.h  version.h
services/txt_cmds/: Cargo.toml  Dockerfile  env.rb  txt_cmds.yml
services/txt_cmds/src/: main.rs
services/voice/: Dockerfile  intents.json  requirements.txt  voice.py
src/: CMakeLists.txt  gtest_main.cpp  logging.h  squidbot.cpp  squidbot.h  squidbot_test.cpp  utils.h
src/core/: CMakeLists.txt  core.h  corelib.h  mock_core.h
src/core/events/: CMakeLists.txt  event_client.cpp  event_client.h  event_client_test.cpp  event_server.cpp  event_server.h  event_server_events.h  event_server_test.cpp  events.h  events_test.cpp
src/core/lib/: core_context.h  core_version.h
src/core/plugin/: CMakeLists.txt  plugin.cpp  plugin.h  plugin_test.cpp  pluginloader.h  pluginloader_test.cpp  pluginmanager.cpp  pluginmanager.h  pluginmanager_test.cpp  pluginrunaction_test.cpp
src/core/runner/: CMakeLists.txt  runner.h  runner_test.cpp
src/core/service/: CMakeLists.txt  service.h  service_loader.h  service_loader_test.cpp  service_manager.cpp  service_manager.h  service_manager_test.cpp  service_test.cpp  service_test_mock.h  servicelib.h
src/core/utils/: context.h  defines.h  lib_loader.h  uuid.h
src/events/: event_client.cpp  event_server.cpp  events.h  events_test.cpp
src/framework/: CMakeLists.txt  framework.h
src/framework/events/: CMakeLists.txt  event_client.h  event_client_test.cpp  event_server.h  event_server_test.cpp  events.h
src/framework/runner/: CMakeLists.txt  runner.h  runner_test.cpp
src/framework/service/: CMakeLists.txt  service.cpp  service.h  service_loader.h  service_loader_test.cpp  service_manager.cpp  service_manager.h  service_manager_test.cpp  service_test.cpp  service_test_mock.h  servicelib.h
src/logging/: logging.cpp  logging.h
src/logging/logger/: CMakeLists.txt  plog_init.cpp
src/plugins/admin/: CMakeLists.txt  admin.cpp  admin.h  factory.cpp
src/plugins/mockplugin/: CMakeLists.txt  factory.cpp  mockplugin.cpp  mockplugin.h
src/services/: CMakeLists.txt  manager.h  service.cpp  service.h  service_manager.cpp  service_manager.h  service_manager_test.cpp  service_test.cpp
src/services/adminlisten/: CMakeLists.txt  adminlisten.cpp  adminlisten.h  events.h  factory.cpp  version.h
src/services/adminservice/: CMakeLists.txt  adminservice.cpp  adminservice.h  events.h  factory.cpp  version.h
src/services/mockservice/: CMakeLists.txt  events.h  factory.cpp  mockservice.cpp  mockservice.h  version.h
src/services/obs/: CMakeLists.txt  obs.cpp  obs.h  obs_test.cpp
tests/txt_cmds/: run.rb  txt_cmds.val.yml
tests/voice/: run.rb
