[package]
name = "txt_cmds"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
chrono = "0.4.23"
futures = "0.3.26"
lazy_static = "1.4.0"
lib.workspace = true
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
strausslib.workspace = true
tokio = { version = "1.25.0", features = ["macros", "rt", "rt-multi-thread"] }
