link_directories(runner events service plugin)
add_subdirectory(runner)
add_subdirectory(events)
add_subdirectory(service)
add_subdirectory(plugin)
set(CORE_TEST_SOURCES ${RUNNER_TEST_SOURCES} ${EVENTS_TEST_SOURCES} ${SERVICE_TEST_SOURCES} ${PLUGIN_TEST_SOURCES} PARENT_SCOPE)
add_library(LIB_CORE ${EVENTS_SOURCES} ${SERVICE_SOURCES} ${PLUGIN_SOURCES})